<resources xmlns:xliff="rn:oasis:names:tc:xliff:document:1.2">
    <string name="mpsdk_empty_bank_deals">No tienes ninguna promoción disponible</string>
    <string name="mpsdk_bank">banco</string>
    <string name="mpsdk_and">y</string>
    <string name="mpsdk_title_activity_bank_deals">Promociones</string>
    <string name="mpsdk_title_activity_payment_methods">¿Cómo quieres pagar?</string>
    <string name="mpsdk_title_activity_customer_pms">¿Con qué tarjeta?</string>
    <string name="other_payment_method">Otro medio de pago…</string>
    <string name="mpsdk_cod_seg_desc">Últimos <xliff:g example="4" id="numeros">%1$d</xliff:g> números al dorso de la tarjeta</string>
    <string name="mpsdk_cod_seg_desc_amex"><xliff:g example="4" id="numeros">%1$d</xliff:g> números al frente de la tarjeta</string>
    <string name="mpsdk_title_activity_vault">Pagar</string>
    <string name="mpsdk_select_pm_label">Selecciona un medio de pago…</string>
    <string name="mpsdk_last_digits_label">Terminada en</string>
    <string name="mpsdk_confirm">Confirmar</string>
    <string name="mpsdk_title_activity_payment_vault">¿Cómo quieres pagar?</string>
    <string name="mpsdk_invalid_pm_for_current_amount">El medio de pago que elegiste no se puede usar para pagar ese monto. Por favor selecciona otro</string>
    <string name="mpsdk_no_payment_methods_found">No hay medios de pago disponibles</string>
    <string name="mpsdk_payment_method_groups_label">Otros</string>
    <string name="mpsdk_card_issuers_title">¿Quién emitió tu tarjeta?</string>
    <string name="mpsdk_card_installments_title">¿En cuántas cuotas?</string>
    <string name="mpsdk_installments_of">de</string>
    <string name="mpsdk_installments_by">x</string>
    <string name="mpsdk_text_terms_and_conditions_start">Al pagar, afirmo que soy mayor de edad y acepto los</string>
    <string name="mpsdk_text_terms_and_conditions_linked">Términos y condiciones</string>
    <string name="mpsdk_text_terms_and_conditions_end">de Mercado Pago</string>
    <string name="mpsdk_payment_amount_to_pay">Total a pagar</string>
    <string name="mpsdk_pay_button_text">Pagar</string>
    <string name="mpsdk_press_again_confirm">Si presionas de nuevo reiniciarás la selección</string>
    <string name="mpsdk_title_activity_checkout">Revisa si está todo bien…</string>
    <string name="mpsdk_invalid_card_number_incomplete">Ingresa todos los números de la tarjeta</string>
    <string name="mpsdk_invalid_empty_name">Ingresa el nombre y apellido impreso en la tarjeta</string>
    <string name="mpsdk_invalid_expiry_date">La fecha que ingresaste es inválida</string>
    <string name="mpsdk_invalid_identification_number">Ingresa todos los números</string>
    <string name="mpsdk_invalid_payment_method">No puedes pagar con este medio de pago</string>
    <string name="mpsdk_card_number_label">Número de tarjeta</string>
    <string name="mpsdk_card_expire_date_label">Fecha de expiración</string>
    <string name="mpsdk_cardholder_name">Nombre y apellido</string>
    <string name="mpsdk_doc_type_label">Tipo</string>
    <string name="mpsdk_doc_number_label">Documento</string>
    <string name="mpsdk_bank_deals_action">Ver promociones</string>
    <string name="mpsdk_security_code">Código de seguridad</string>
    <string name="mpsdk_continue_label">Continuar</string>
    <string name="mpsdk_payment_method">Medio de pago</string>
    <string name="mpsdk_issuer_label">Banco</string>
    <string name="mpsdk_invalid_card_bin">El número de tarjeta que ingresaste no se corresponde con el tipo de tarjeta</string>
    <string name="mpsdk_invalid_card_luhn">El número de tarjeta que ingresaste es incorrecto</string>
    <string name="mpsdk_invalid_card_length">Ingresa los %1$s números de la tarjeta</string>
    <string name="mpsdk_invalid_cvv_length">Ingresa los %1$s números del código de seguridad</string>
    <string name="mpsdk_invalid_field">Revisa este dato</string>
    <string name="mpsdk_invalid_empty_card">Ingresa el número de la tarjeta de crédito</string>
    <string name="mpsdk_card_expiry_date_hint">Mes / Año</string>
    <string name="mpsdk_card_expiry_month_hint">MM</string>
    <string name="mpsdk_card_expiry_divider_hint">/</string>
    <string name="mpsdk_card_expiry_year_hint">AA</string>
    <string name="mpsdk_card_identification_label">DOCUMENTO DEL TITULAR\nDE LA TARJETA</string>
    <string name="mpsdk_card_identification_number">Número</string>
    <string name="mpsdk_card_identification_type">Tipo</string>
    <string name="mpsdk_cardholder_name_short">NOMBRE APELLIDO</string>
    <string name="mpsdk_title_activity_new_card">Ingresa los datos de tu tarjeta</string>
    <string name="mpsdk_title_activity_congrat">¡Listo, se acreditó tu pago!</string>
    <string name="mpsdk_subtitle_action_activity_congrat">Te enviaremos los datos a\n%1$s</string>
    <string name="mpsdk_text_state_acount_activity_congrat">En tu estado de cuenta verás el cargo como MERCADOPAGO</string>
    <string name="mpsdk_payment_id_description">Comprobante\nNº</string>
    <string name="mpsdk_title_activity_call_for_authorize">Debes autorizar ante %1$s el pago de %2$s a Mercado Pago</string>
    <string name="mpsdk_text_order_call_for_authorize">El teléfono está al dorso de tu tarjeta.</string>
    <string name="mpsdk_error_title_activity_call_for_authorize">Debes autorizar el pago ante tu tarjeta</string>
    <string name="mpsdk_text_authorized_call_for_authorize">Ya hablé con %1$s y me autorizó</string>
    <string name="mpsdk_text_question_call_for_authorize">¿No pudiste autorizarlo?</string>
    <string name="mpsdk_text_select_other_payment_method">Elige otro medio de pago</string>
    <string name="mpsdk_title_pending">Estamos procesando el pago</string>
    <string name="mpsdk_subtitle_pending_contingency">En menos de 1 hora te enviaremos por e-mail el resultado.</string>
    <string name="mpsdk_text_other_payment_method_button_rejection">Usar otro medio de pago</string>
    <string name="mpsdk_text_pay_with_other_method">Pagar con otro medio</string>
    <string name="mpsdk_text_enter_again">Ingrésalo nuevamente</string>
    <string name="mpsdk_subtitle_rejection_insufficient_amount_credit_card">¡No te desanimes! Puedes elegir otro medio de pago.</string>
    <string name="mpsdk_title_other_reason_rejection">%1$s no procesó el pago</string>
    <string name="mpsdk_text_select_other_rejection">Usa otra tarjeta u otro medio de pago</string>
    <string name="mpsdk_text_some_card_data_is_incorrect">Algún dato de tu %1$s es incorrecto.</string>
    <string name="mpsdk_title_bad_filled_other">Uy, no pudimos procesar el pago</string>
    <string name="mpsdk_text_some_number">Algún número de tu %1$s es incorrecto.</string>
    <string name="mpsdk_text_insufficient_amount">Tu %1$s no tiene fondos suficientes</string>
    <string name="mpsdk_subtitle_rejection_insufficient_amount">¡No te desanimes! Recárgala en cualquier banco o desde tu banca electrónica e inténtalo de nuevo. O si prefieres, puedes elegir otro medio de pago.</string>
    <string name="mpsdk_subtitle_rejection_duplicated_payment">Si necesitas volver a pagar usa otra tarjeta u otro medio de pago.</string>
    <string name="mpsdk_text_active_card">Llama a %1$s para que active tu tarjeta</string>
    <string name="mpsdk_subtitle_rejection_card_disabled">El teléfono está al dorso de tu tarjeta.</string>
    <string name="mpsdk_title_bad_filled_security_code">El código de seguridad no es el correcto.</string>
    <string name="mpsdk_title_bad_filled_date">La fecha de vencimiento no es la correcta.</string>
    <string name="mpsdk_title_rejection_high_risk">Por seguridad, tuvimos que rechazar tu pago</string>
    <string name="mpsdk_subtitle_rejection_high_risk">Si quieres pagar con el dinero de tu cuenta, contactate con Atención al Cliente de Mercado Pago. O si prefieres, puedes elegir otro medio de pago.</string>
    <string name="mpsdk_title_rejection_max_attempts">Llegaste al límite de intentos permitidos</string>
    <string name="mpsdk_subtitle_rejection_max_attempts">Elige otra tarjeta u otro medio de pago.</string>
    <string name="mpsdk_rejection_title">Algo salió mal…</string>
    <string name="mpsdk_error_message_invalid_amount">Monto inválido</string>
    <string name="mpsdk_error_message_invalid_item">Item inválido</string>
    <string name="mpsdk_error_message_expired_preference">Preferencia expirada</string>
    <string name="mpsdk_error_message_inactive_preference">Preferencia inactiva</string>
    <string name="mpsdk_error_message_invalid_default_installments">Número de cuotas por defecto inválido</string>
    <string name="mpsdk_error_message_invalid_max_installments">Número máximo de cuotas inválido</string>
    <string name="mpsdk_error_message_excluded_all_payment_type">Todos los tipos de pagos excluídos</string>
    <string name="mpsdk_error_message_invalid_currency">Moneda inválida</string>
    <string name="mpsdk_error_message_invalid_title">Título inválido</string>
    <string name="mpsdk_error_message_invalid_merchant">Comercio inválido</string>
    <string name="mpsdk_error_message_invalid_preference">Preferencia inválida</string>
    <string name="mpsdk_error_message_invalid_installments">Número de cuotas inválido</string>
    <string name="mpsdk_error_title">¡Uy! Algo salió mal</string>
    <string name="mpsdk_standard_error_message">Vamos a solucionarlo. Intenta más tarde.</string>
    <string name="mpsdk_error_message_email_required">El email es requerido</string>
    <string name="mpsdk_empty_card_expiration_month">No se ingresó el mes de la fecha de expiración de la tarjeta</string>
    <string name="mpsdk_empty_card_expiration_year">No se ingresó el año de la fecha de expiración de la tarjeta</string>
    <string name="mpsdk_empty_card_holder_name">No se ingresó el nombre del titular de la tarjeta</string>
    <string name="mpsdk_empty_document_number">No se ingresó el número de documento del titular de la tarjeta</string>
    <string name="mpsdk_empty_document_type">No se ingresó el tipo de documento del titular de la tarjeta</string>
    <string name="mpsdk_invalid_payment_type_id">Tipo de medio de pago inválido</string>
    <string name="mpsdk_invalid_card_expiration_month">Mes de expiración de la tarjeta inválido</string>
    <string name="mpsdk_invalid_card_expiration_year">Año de expiración de la tarjeta inválido</string>
    <string name="mpsdk_invalid_payer_email">Email del cliente inválido</string>
    <string name="mpsdk_customer_not_allowed_to_operate">No tienes permitido operar</string>
    <string name="mpsdk_collector_not_allowed_to_operate">El vendedor no tiene permitido operar</string>
    <string name="mpsdk_invalid_users_involved">Usuarios no válidos involucrados</string>
    <string name="mpsdk_customer_equal_to_collector">Mismo usuario cliente y vendedor</string>
    <string name="mpsdk_invalid_card_holder_name">Nombre del titular de la tarjeta inválido</string>
    <string name="mpsdk_unauthorized_client">Cliente no autorizado</string>
    <string name="mpsdk_payment_method_not_found">No encontramos el medio de pago seleccionado</string>
    <string name="mpsdk_invalid_security_code">Código de seguridad inválido</string>
    <string name="mpsdk_security_code_required">Código de seguridad requerido</string>
    <string name="mpsdk_invalid_card_number">Número de tarjeta inválido</string>
    <string name="mpsdk_text_keep_buying">Seguir comprando</string>
    <string name="mpsdk_text_cancel_payment_and_keep_buying">Cancelar pago y seguir comprando</string>
    <string name="mpsdk_zero_rate">Sin interés</string>
    <string name="mpsdk_exit_label">Salir</string>
    <string name="mpsdk_cancel_payment">Cancelar pago</string>
    <string name="mpsdk_input_button_back">Anterior</string>
    <string name="mpsdk_input_button_next">Continuar</string>
    <string name="mpsdk_what_can_do">¿Qué puedo hacer?</string>
</resources>