<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mpsdk_white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/mpsdk_white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/mpsdk_color_pending_background"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/mpsdkClock"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="34dp"
                        android:layout_marginBottom="14dp"
                        android:tint="@color/mpsdk_white"
                        android:src="@drawable/icon_pending"
                        android:layout_gravity="center_horizontal" />

                    <com.mercadopago.customviews.MPTextView
                        android:id="@+id/mpsdkPendingTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="30dp"
                        android:paddingLeft="58dp"
                        android:paddingRight="58dp"
                        android:gravity="bottom|center"
                        android:textSize="22dp"
                        android:textColor="@color/mpsdk_white"
                        android:text="@string/mpsdk_title_pending" />
                </LinearLayout>


                <com.mercadopago.views.MPTextView
                    android:id="@+id/mpsdkWhatCanIdo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="bottom|center"
                    android:textSize="21dp"
                    android:text="@string/mpsdk_what_can_do" />

                <com.mercadopago.views.MPTextView
                    android:id="@+id/mpsdkPendingSubtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:gravity="bottom|center"
                    android:textSize="18dp"
                    android:text="@string/mpsdk_subtitle_pending_contingency" />

                <FrameLayout
                    android:id="@+id/mpsdkPendingOptionButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/mpsdk_button_bg_stroke"
                    android:onClick="onClickPendingOptionButton">
                    <com.mercadopago.views.MPTextView
                        android:id="@+id/mpsdkPendingOptionButtonText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:textSize="18dp"
                        android:textColor="@color/mpsdk_white_background"
                        android:text="@string/mpsdk_text_pay_with_other_method"/>
                </FrameLayout>

                <com.mercadopago.views.MPTextView
                    android:id="@+id/mpsdkKeepBuyingPending"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/mpsdk_text_keep_buying"
                    android:textColor="@color/mpsdk_color_link"
                    android:textSize="@dimen/mpsdk_small_text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>