<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="12dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/mpsdkCardNumberInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <com.mercadopago.views.MPTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="14dp"
            android:textColor="@color/mpsdk_color_new_card_text"
            android:text="@string/mpsdk_card_number_label"/>
        <com.mercadopago.views.MPEditText
            android:id="@+id/mpsdkCardNumber"
            android:layout_width="@dimen/mpsdk_edittext_width_inline_form"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginRight="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginTop="@dimen/mpsdk_edittext_margin_top_inline_form"
            android:textSize="19dp"
            android:textColor="@color/abc_search_url_text_selected"
            android:inputType="number"
            android:digits="0123456789 "
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLength="19"
            tools:text="5031 7557 3453 0604"
            custom:errorColor="@color/mpsdk_color_red_error"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mpsdkCardPaymentTypeSelectionContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <Spinner
            android:id="@+id/mpsdkCardPaymentTypeSelector"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="2dp"
            android:paddingStart="2dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/mpsdkCardholderNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <com.mercadopago.views.MPTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="14dp"
            android:lines="1"
            android:textColor="@color/mpsdk_color_new_card_text"
            android:text="@string/mpsdk_cardholder_name"/>
        <com.mercadopago.views.MPEditText
            android:id="@+id/mpsdkCardholderName"
            android:layout_width="@dimen/mpsdk_edittext_width_inline_form"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginRight="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginTop="2dp"
            android:maxLength="50"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:textSize="19dp"
            android:privateImeOptions="nm"
            android:inputType="textNoSuggestions|textPersonName"
            android:textColor="@color/abc_search_url_text_selected"
            custom:errorColor="@color/mpsdk_color_red_error"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mpsdkExpiryDateInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <com.mercadopago.views.MPTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="14dp"
            android:lines="1"
            android:textColor="@color/mpsdk_color_new_card_text"
            android:text="@string/mpsdk_card_expire_date_label"/>
        <com.mercadopago.views.MPEditText
            android:id="@+id/mpsdkCardExpiryDate"
            android:layout_width="@dimen/mpsdk_edittext_width_inline_form"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginRight="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginTop="2dp"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:digits="0123456789/"
            android:textSize="19dp"
            android:textColor="@color/abc_search_url_text_selected"
            android:maxLength="5"
            custom:errorColor="@color/mpsdk_color_red_error"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mpsdkCardSecurityCodeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <com.mercadopago.views.MPTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textSize="14dp"
            android:lines="1"
            android:textColor="@color/mpsdk_color_new_card_text"
            android:text="@string/mpsdk_security_code"/>

        <com.mercadopago.views.MPEditText
            android:id="@+id/mpsdkCardSecurityCode"
            android:layout_width="@dimen/mpsdk_edittext_width_inline_form"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginRight="@dimen/mpsdk_edittext_margin_inline_form"
            android:layout_marginTop="2dp"
            android:singleLine="true"
            android:maxLength="4"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textSize="19dp"
            android:textColor="@color/abc_search_url_text_selected"
            custom:errorColor="@color/mpsdk_color_red_error"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mpsdkCardIdentificationTypeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <com.mercadopago.views.MPTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:lines="1"
            android:textSize="14dp"
            android:textColor="@color/mpsdk_color_new_card_text"
            android:text="@string/mpsdk_card_identification_type"/>

        <!-- spinner -->
        <Spinner
            android:id="@+id/mpsdkCardIdentificationTypeSelector"
            android:layout_width="100dp"
            android:layout_height="36dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/mpsdkCardIdentificationNumberContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/mpsdkCardIdentificationInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <com.mercadopago.views.MPTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:textSize="14dp"
                        android:lines="1"
                        android:textColor="@color/mpsdk_color_new_card_text"
                        android:text="@string/mpsdk_card_identification_number"/>
                    <com.mercadopago.views.MPEditText
                        android:id="@+id/mpsdkCardIdentificationNumber"
                        android:layout_width="193dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/mpsdk_edittext_margin_inline_form"
                        android:layout_marginRight="@dimen/mpsdk_edittext_margin_inline_form"
                        android:layout_marginTop="2dp"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:maxLength="15"
                        android:textSize="19dp"
                        android:textColor="@color/abc_search_url_text_selected"
                        custom:errorColor="@color/mpsdk_color_red_error"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
